--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Home#index</h1>
+<h1 data-controller='hello'>Home#index</h1>
 <p class="text-red-500">Find me in app/views/home/index.html.erb</p>
