fix stores show

--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -5,5 +5,12 @@
 <%= f.text_field :tel %>
 <%= f.label :address %>
 <%= f.text_field :address %>
+<%= f.label :business_hours_start %>
+<%= f.text_field :business_hours_start %>
+<%= f.label :business_hours_end %>
+<%= f.text_field :business_hours_end %>
+<%= f.label :logo %>
+<%= f.text_field :logo %>
 <%= f.submit %>
 <% end %>
+
