--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,11 @@
 <nav>
-  <tr>
-    <td>
-      <%= link_to "註冊" , new_user_registration_path %>
-    </td>
-    <td>
-      <%= link_to "登入" , new_user_session_path %>
-    </td>
-    <td>
-      <%= link_to "登出" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "} %>
-    </td>
-  </tr>
+  <% if user_signed_in?%>
+    <%= link_to "登出" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "} %>
+    <%= link_to "編輯" , edit_user_registration_path %>
+
+  <% else %>
+    <%= link_to "註冊" , new_user_registration_path %>
+    <%= link_to "登入" , new_user_session_path %>
+
+  <% end %>
 </nav>
