creating_mune_template_not_finsh(1)

--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,8 +1,4 @@
-<h1>菜單頁面</h1>
-
-<%= link_to "新增菜單", new_store_menu_path %>    
-<%= link_to "新增商店", new_store_path %>
-<%= link_to "回首頁"  , root_path %>               
+<%= render "shared/menunavbar" %>
 
 
 <table>
