fix classification edit

--- a/app/views/classifications/edit.html.erb
+++ b/app/views/classifications/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>classifications#edit</h1>
 <%# <%= render "form" %> %>
 
-<%= form_with(model: @classification, url: "store_classifications_path(@store)NOTE") do |f| %>
+<%= form_with(model: @classification, url: store_classification_path({store: @classification.store, id: @classification.id})) do |f| %>
 <%= f.label :name %>
 <%= f.text_field :name %>
 <%= f.submit %>
