--- a/app/views/classifications/new.html.erb
+++ b/app/views/classifications/new.html.erb
@@ -1,7 +1,3 @@
 <h1>classifications#new</h1>
-<%= form_with(model: @classification, url: store_classifications_path(@store)) do |f| %>
-<%= f.label :name %>
-<%= f.text_field :name %>
-<%= f.submit %>
-<% end %>
+<%= render "form", store: @store, classification: @classification %>
 
