--- a/app/views/classifications/edit.html.erb
+++ b/app/views/classifications/edit.html.erb
@@ -1,6 +1,2 @@
 <h1>classifications#edit</h1>
-<%= form_with(model: @classification, url: store_classification_path({store: @classification.store, id: @classification.id})) do |f| %>
-<%= f.label :name %>
-<%= f.text_field :name %>
-<%= f.submit %>
-<% end %>
+<%= render "form", store: @classification.store, classification: @classification %>
