--- a/app/views/shared/_menuform.html.erb
+++ b/app/views/shared/_menuform.html.erb
@@ -1,6 +1,11 @@
 <%= form_with(model: menu , url: store_menus_path(@store)) do |f| %>
 
   <div>
+    <%= f.label :classification_id, "分類" %>
+    <%= f.select :classification_id, Classification.all.map{ |c| [c.name, c.id] } %>
+  </div>
+
+  <div>
     <%= f.label :photo ,"商品圖片"%>
     <%= f.url_field :photo %>
   </div>
