--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,23 +1,31 @@
 <%= render "shared/menunavbar" %>
 
 
-<table>
-<tr>
-  <td>照片</td>
-  <td>名稱</td>
-  <td>價格</td>
-  <td>備註</td>
-</tr>
+<section class="bg-white dark:bg-gray-900">
+  <div class="container px-6 py-10 mx-auto">
+  <h1 class="text-3xl font-semibold text-gray-800 capitalize lg:text-4xl dark:text-white"><%= @store.name %>Store Menu</h1>
+    <% @menus.each do |menu| %>
+      <div class="grid grid-cols-1 gap-8 mt-8 md:mt-16 md:grid-cols-2">
+        <div class="lg:flex">
+          <%= image_tag menu.image_resize("200x200"), class:"object-cover w-full h-56 rounded-lg lg:w-64" %>
 
-<% @menus.each do |menu| %>
-<tr>
-  <td><%= menu.photo%></td>
-  <td><%= menu.name %></td>
-  <td><%= menu.price%></td>
-  <td><%= menu.note%></td>
-</tr>
-<% end %>
+          <div class="flex flex-col justify-between py-6 lg:mx-6">
+              <%= link_to menu.name , store_menu_path(menu , @store) , class:"text-xl font-semibold text-gray-800 hover:underline dark:text-white "%>
+              <p>
+                <%= menu.note %>
+              </p>
+              <span class="self-end text-md gray-500 text- dark:text-gray-100"><%= menu.price %></span>
 
-</table>
-
+            <div class="flex">
+              <%= link_to "修改" , edit_store_menu_path(@store ,menu) ,class:"mx-2" %>
+              
+              <%= link_to "刪除" , store_menu_path(@store ,menu) ,method: "DELETE" , class:"mx-2" %>
+            </div>
+        
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</section>
 
