--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,11 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :"匿名" %><br />
+    <%= f.text_field :nickname, autofocus: true, autocomplete: "nickname" %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
@@ -20,6 +25,17 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
+  
+  <div class="field">
+    <%= f.label :"消費者" %><br />
+    <%= f.radio_button :role, "user" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :"店家" %><br />
+    <%= f.radio_button :role, "vender" %>
+  </div>
+
 
   <div class="actions">
     <%= f.submit "Sign up" %>
