--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -15,9 +15,9 @@
         <tr class="block bg-gray-300 border border-grey-500 md:border-none md:table-row">
           <td class="block p-2 text-center md:border md:border-grey-500 md:table-cell">
             <span class="inline-block w-1/3 font-bold md:hidden">Update Menu</span>
-            <button class="px-2 py-1 font-bold text-white bg-blue-500 border-blue-500 rounded bo-rder bg hover:bg-blue-700"><%= link_to "菜單分類", store_classifications_path(store.id) %>
+            <button class="px-2 py-1 font-bold text-white bg-blue-500 border border-blue-500 rounded bg hover:bg-blue-700"><%= link_to "菜單分類", store_classifications_path(store.id) %>
             </button>
-            <button class="px-2 py-1 font-bold text-white bg-blue-500 border-blue-500 rounded bo-rder bg hover:bg-blue-700"><%= link_to "新增菜單", store_menus_path(store.id) %>
+            <button class="px-2 py-1 font-bold text-white bg-blue-500 border border-blue-500 rounded bg hover:bg-blue-700"><%= link_to "新增菜單", store_menus_path(store.id) %>
             </button>
           </td>
           <td class="block p-2 text-center md:border md:border-grey-500 md:table-cell">
