--- a/app/views/desks/index.html.erb
+++ b/app/views/desks/index.html.erb
@@ -1,1 +1,19 @@
 <h1>desks#index</h1>
+<%= link_to "新增桌位", new_store_desk_path %>
+
+<table>
+  <tr>
+    <th>桌位</th>
+    <th>座位數量</th>
+    <th>編輯</th>
+    <th>刪除</th>
+  </tr>
+  <% @desks.each do |desk| %>
+    <tr>
+      <td><%= desk.name %></td>
+      <td><%= desk.seat_amount %></td>
+      <td><%= link_to "編輯", edit_store_desk_path(@store, desk.id) %></td>
+      <td><%= link_to "刪除", store_desk_path(@store, desk.id), method: "delete", data: {confirm: "確定刪除？"} %></td>
+    </tr>
+  <% end %>
+</table>
