--- a/app/views/menus/edit.html.erb
+++ b/app/views/menus/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>商家菜品頁面</h1>
+<%= render "shared/menunavbar" %>
+
+<h1 class="py-10 font-mono text-5xl font-bold text-center">Edit Menu</h1>
 
 <%= render "shared/menuform" , store: @menu.store , menu: @menu %>
