--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -1,3 +1,5 @@
-<h1>商家菜品新增頁面</h1>
+<%= render "shared/menunavbar" %>
+
+<h1 class="py-10 font-mono text-5xl font-bold text-center">Add Menu</h1>
 
 <%= render "shared/menuform" , store: @store,menu: @menu %>
