--- a/app/views/shared/_menunavbar.html.erb
+++ b/app/views/shared/_menunavbar.html.erb
@@ -1,4 +1,4 @@
-<nav id="header" class="z-30 w-full py-1 mt-1 bg-white border-b shadow-lg top-10">
+<nav id="header" class="z-30 w-full py-1 mt-1 mb-10 bg-white shadow-md top-10">
   <div class="flex items-center justify-between w-full px-6 py-2 mt-0">
      <label for="menu-toggle" class="block cursor-pointer md:hidden">
         <svg class="text-blue-600 fill-current" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
