add serial_number to desks

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+@media print {
+  .noBreak {
+    break-inside: avoid;
+  }
+  .no-print {
+    display: none;
+  }
+}
+
+@page {
+  margin-top: 2cm;
+}
