--- a/app/views/desks/show.html.erb
+++ b/app/views/desks/show.html.erb
@@ -1,6 +1,6 @@
-<h1>desks#show</h1>
-<% qrcode = RQRCode::QRCode.new("localhost:3000/desks/#{@desk.id}") %>
+<h1><%= @desk.name %>(文字置於QRCode上方正中間)</h1>
+<% qrcode = RQRCode::QRCode.new("localhost:3000/desks?serial_number=#{@desk.serial_number}") %>
 <%= 
-qrcode.as_svg(color: :black, offset: 15, shape_rendering: "optimizeSpeed", module_size: 10).html_safe
+qrcode.as_svg(color: :black, offset: 15, shape_rendering: "optimizeSpeed", module_size: 8).html_safe
 %>
- 
+ <button class="border bg-gray-300 p-1 mb-1 no-print" onclick="window.print()">列印QRCode</button>
