--- a/app/views/desks/_form.html.erb
+++ b/app/views/desks/_form.html.erb
@@ -3,5 +3,6 @@
 <%= f.text_field :name %>
 <%= f.label :seat_amount, "座位數量" %>
 <%= f.number_field :seat_amount, min: 1 %>
+<%= f.hidden_field :serial_number, value: "#{rand(10..99)}#{Integer(Time.now).to_s.slice(6..-1)}#{rand(10..99)}" %>
 <%= f.submit %>
 <% end %>
