--- a/app/views/desks/show.html.erb
+++ b/app/views/desks/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @desk.name %>(文字置於QRCode上方正中間)</h1>
-<% qrcode = RQRCode::QRCode.new("localhost:3000/desks?serial_number=#{@desk.serial_number}") %>
+<% qrcode = RQRCode::QRCode.new("localhost:3000/foods?serial_number=#{@desk.serial_number}") %>
 <%= 
 qrcode.as_svg(color: :black, offset: 15, shape_rendering: "optimizeSpeed", module_size: 8).html_safe
 %>
