--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,31 +1,120 @@
 <%= render "shared/menunavbar" %>
 
+  <!------------- banner ---------------->
+  <div id="carouselExampleCaptions" class="relative carousel slide" data-bs-ride="carousel">
 
 
-
-
-<nav></nav>
-
-
-<section class="px-10">
-  <h1 class="mb-2 text-3xl font-semibold text-gray-800 capitalize lg:text-4xl dark:text-white"><%= @store.name %>Store Menu</h1>
-  <div class="grid-cols-2 overflow-hidden bg-white max-w-fullmx-auto sm:grid ">
-    <% @menus.each do |menu| %>
-      <div class="w-full mb-2 shadow rounded-xl md:flex">
-        <div class="overflow-hidden rounded-xl md:flex-shrink-0">
-          <%= image_tag menu.image_resize("200x200"), class:"object-cover w-full h-48 md:w-48" %>
-        </div>
-        <div class="flex-col p-8 md:flex">
-          <div class="text-sm font-semibold tracking-wide text-indigo-500 uppercase">
-            <%= Classification.find(menu.classification_id).name %>
-          </div>
-          <div>
-            <%= link_to menu.name , store_menu_path(menu , @store) , class:"block mt-1 text-lg font-medium leading-tight hover:underline"%>
-          </div>
-          <p class="mt-2 text-gray-500"><%= menu.note %></p>
-          <div class=""><%= menu.price %></div>
+    <div class="box-border relative w-full overflow-hidden carousel-inner">
+      <div class="relative float-left w-full h-md carousel-item active">
+        <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(15).jpg" class="block w-full object-cover" alt="..."
+          style="aspect-ratio: 4 / 1" />
+        <div class="absolute hidden text-center carousel-caption md:block">
+          <h5 class="text-xl">First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
         </div>
       </div>
-    <% end %>
+      <div class="relative float-left w-full carousel-item">
+        <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(22).jpg" class="block w-full" alt="..."
+          style="aspect-ratio: 4 / 1" />
+        <div class="absolute hidden text-center carousel-caption md:block">
+          <h5 class="text-xl">Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="relative float-left w-full carousel-item">
+        <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(23).jpg" class="block w-full" alt="..."
+          style="aspect-ratio: 4 / 1" />
+        <div class="absolute hidden text-center carousel-caption md:block">
+          <h5 class="text-xl">Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="absolute bottom-0 left-0 right-0 flex justify-center p-0 mb-4 carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+        aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+        aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+        aria-label="Slide 3"></button>
+    </div>
+
+    <button
+      class="absolute top-0 bottom-0 left-0 flex items-center justify-center p-0 text-center border-0 carousel-control-prev hover:outline-none hover:no-underline focus:outline-none focus:no-underline"
+      type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="inline-block bg-no-repeat carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+      class="absolute top-0 bottom-0 right-0 flex items-center justify-center p-0 text-center border-0 carousel-control-next hover:outline-none hover:no-underline focus:outline-none focus:no-underline"
+      type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="inline-block bg-no-repeat carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-</section> 
+
+
+
+  <!------------- classcafication_item ---------------->
+  <div class="flex w-full py-8 space-x-2 justify-evenly">
+    <% @classifications.each do |classification|%>
+      <button
+        class="inline-block px-10 py-4 text-xl font-bold text-center rounded-md text-block pleading-none whitespace-nowrap hover:bg-tiffany hover:text-white ">
+        <%= classification.name%>
+      </button>
+      <% end %>
+  </div>
+
+  <hr class="">
+  <!------------- meun_card ---------------->
+  <section class="px-5">
+    <h1 class="my-16 text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white">
+      <%= @store.name %>Store Menu
+    </h1>
+    <% @classifications.each do |classification| %>
+      <h2 class=" text-3xl font-semibold text-center text-gray-800 capitalize lg:text-4xl dark:text-white">
+        <%= classification.name %>
+      </h2>
+      <div class="max-w-full grid-cols-2 p-5 mx-auto overflow-hidden bg-white md:grid ">
+        <% @menus.each do |menu| %>
+          <div
+            class="mx-5 mb-5 transition duration-700 ease-out transform shadow-xl hover:scale-105 rounded-xl hover:shadow-2xl md:flex ">
+            <div class="overflow-hidden rounded-xl md:flex-shrink-0">
+              <%= image_tag menu.image_resize("200x200"), class:"object-cover w-full h-full rounded-lg lg:w-64" %>
+                <!-- <% if menu.photo.attached? %>
+                <%= image_tag menu.photo ,class:'object-cover w-full h-full' %>
+              <% end %> -->
+            </div>
+            <div class="flex-col px-8 py-6 md:flex">
+              <div class="text-sm font-semibold tracking-wide text-indigo-500 uppercase">
+                <%= Classification.find(menu.classification_id).name %>
+              </div>
+              <div>
+                <%= link_to menu.name , store_menu_path(menu , @store) , class:"block mt-1 text-lg font-medium
+                  leading-tight hover:underline"%>
+              </div>
+              <p class="py-2 mt-2 text-gray-500">
+                <%= menu.note %>
+              </p>
+              <div class="flex justify-between ">
+                <div>
+                  <%= link_to "Edit" , edit_store_menu_path(@store , menu) ,class:"transition text-white duration-500
+                    ease-in-out bg-pccific p-1 mx-1 rounded-md hover:bg-red-400 transform hover:-translate-y-1
+                    hover:scale-110"%>
+                    <%= link_to "Delete" , store_menu_path(@store , menu) ,method: "DELETE" ,class:"transition
+                      text-white duration-500 ease-in-out bg-pccific p-1 mx-1 rounded-md hover:bg-red-400 transform
+                      hover:-translate-y-1 hover:scale-110"%>
+                </div>
+                <div class="text-xl">$<%= menu.price %>
+                </div>
+              </div>
+            </div>
+          </div>
+          <% end %>
+      </div>
+      <% end %>
+  </section>
+
+  <%= render "shared/footer" %>
