--- a/app/views/shared/_menunavbar.html.erb
+++ b/app/views/shared/_menunavbar.html.erb
@@ -1,26 +1,19 @@
-<nav id="header" class="z-30 w-full py-1 mt-1 mb-10 bg-white shadow-md top-10">
-  <div class="flex items-center justify-between w-full px-6 py-2 mt-0">
-     <label for="menu-toggle" class="block cursor-pointer md:hidden">
-        <svg class="text-blue-600 fill-current" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-           <title>menu</title>
-           <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
-        </svg>
-     </label>
-     <input class="hidden" type="checkbox" id="menu-toggle">
+<nav id="header" class="z-30 w-full bg-white shadow-md top-10">
+  <div class="flex items-center justify-between w-full px-6 py-2 mt-0 bg-pccific">
      <div class="order-3 hidden w-full md:flex md:items-center md:w-auto md:order-1" id="menu">
         <nav>
-           <ul class="items-center justify-between pt-4 text-base text-blue-600 md:flex md:pt-0">
-              <li><%=link_to current_user.email, edit_user_registration_path ,class: "inline-block px-1 py-2 text-lg font-medium no-underline hover:text-black lg:-ml-2" %></li>
-              <li><%= link_to "新增菜單", new_store_menu_path ,class: "inline-block px-4 py-2 text-lg font-medium no-underline hover:text-black lg:-ml-2"%></li>
-              <li><%= link_to "新增商店", new_store_path ,class:"inline-block px-2 py-2 text-lg font-medium no-underline hover:text-black lg:-ml-2" %></li>
-              <li><%= link_to "回首頁", root_path ,class:"inline-block px-2 py-2 text-lg font-medium no-underline hover:text-black lg:-ml-2" %></li>
+           <ul class="items-center justify-between pt-4 text-white md:flex md:pt-0">
+              <li><%=link_to current_user.email, edit_user_registration_path ,class: "font-mono inline-block px-1 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2" %></li>
+              <li><%= link_to "新增菜單", new_store_menu_path ,class: "inline-block mx-4 px-4 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2"%></li>
+              <li><%= link_to "新增商店", new_store_path ,class:"mx-4 inline-block px-2 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2" %></li>
+              <li><%= link_to "回首頁", root_path ,class:"mx-4 inline-block px-2 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2" %></li>
            </ul>
         </nav>
      </div>
-     <div class="flex flex-wrap items-center justify-end order-2 mr-0 md:order-3 md:mr-4" id="nav-content">
+     <div class="flex flex-wrap items-center justify-end order-2 mr-0 text-xl md:order-3 md:mr-4" id="nav-content">
         <div class="flex items-center w-full auth md:w-full">
           <% if user_signed_in?%>
-            <button class="px-10 py-2 text-gray-200 bg-red-400 rounded py- hover:bg-red-300 hover:text-gray-100"><%= link_to "登出" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "} %></button>
+            <button class="px-8 py-2 text-gray-200 transition duration-500 ease-in-out transform rounded-md bg-tiffany hover:bg-pccific hover:text-xl hover:px-12 hover:py-5 hover:scale-110"><%= link_to "Sign out" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "} %></button>
           <% else %>
             <button class="p-2 mr-4 text-gray-800 bg-transparent border border-gray-300 rounded hover:bg-gray-100 hover:text-gray-700"><%= link_to "註冊" , new_user_registration_path %></button>
             <button class="p-2 mr-4 text-gray-800 bg-red-400 border border-gray-300 rounded hover:bg-red-300 hover:text-gray-700"><%= link_to "登入" , new_user_session_path %></button>
@@ -30,3 +23,4 @@
   </div>
 </nav>
 
+<!--  bg-tiffany py- hover:bg-red-300 hover:text-gray-100 hover:-translate-y-1 hover:scale-110 -->
