顧客點餐畫面, devis 畫面完成

--- a/app/views/classifications/index.html.erb
+++ b/app/views/classifications/index.html.erb
@@ -1,5 +1,4 @@
-<%= render "classnavbar"%>
-
+<%= render "shared/classificationnavbar" %>
 
 <table class="block min-w-full border-collapse md:table">
   <thead class="block md:table-header-group">
