--- a/app/views/classifications/new.html.erb
+++ b/app/views/classifications/new.html.erb
@@ -1,3 +1,4 @@
-<h1>classifications#new</h1>
+<h1><h1 class="py-10 font-mono text-5xl font-bold text-center">Add Classification</h1>
+</h1>
 <%= render "form", store: @store, classification: @classification %>
 
