--- a/app/views/shared/_classificationnavbar.html.erb
+++ b/app/views/shared/_classificationnavbar.html.erb
@@ -4,18 +4,19 @@
         <nav>
            <ul class="items-center justify-between pt-4 text-white md:flex md:pt-0">
 
-              <li><%=link_to current_user.email, edit_user_registration_path ,class: "font-mono inline-block px-1 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2" %>
+              <li><%=link_to current_user.email, edit_user_registration_path ,class: "font-mono inline-block px-1 py-2 text-xl font-medium no-underline hover:text-black " %>
               </li>
 
-              <li><%= link_to "新增菜單", new_store_menu_path,class: "mx-4 inline-block px-4 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2"%>
+              <li><%= link_to "新增菜單", new_store_menu_path,class: "inline-block  px-2 py-2 text-xl font-medium no-underline hover:text-black "%>
               </li>
 
-              <li><%= link_to "新增商店", new_store_path ,class:"mx-4 inline-block px-2 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2" %>
+              <li><%= link_to "新增分類", new_store_classification_path ,class: "inline-block px-2 py-2 text-xl font-medium no-underline hover:text-black "%></li>
+
+              <li><%= link_to "新增商店", new_store_path ,class:" inline-block px-2 py-2 text-xl font-medium no-underline hover:text-black" %>
               </li>
 
-              <li><%= link_to "回首頁", root_path ,class:"mx-4 inline-block px-2 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2" %>
+              <li><%= link_to "回首頁", root_path ,class:" inline-block px-2 py-2 text-xl font-medium no-underline hover:text-black " %>
               </li>
-
            </ul>
         </nav>
      </div>
