--- a/app/views/shared/_menuform.html.erb
+++ b/app/views/shared/_menuform.html.erb
@@ -1,8 +1,9 @@
 
-      <section class="max-w-4xl p-6 mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
-        <h1 class="text-xl font-bold capitalize text-block dark:text-block">店家菜單新增頁面</h1>
+      <section class="max-w-4xl mx-auto bg-gray-100 rounded-md shadow-md dark:bg-gray-800">
+      <div class="h-3 bg-green-400 rounded-t-md"></div>
+        <h1 class="text-xl px-6 pt-6 font-bold capitalize text-block dark:text-block">店家菜單新增頁面</h1>
           <%= form_with( model: [ store , menu ] ) do |f| %>
-            <div class="grid grid-cols-1 gap-6 mt-4 sm:grid-cols-2">
+            <div class="grid grid-cols-1 gap-6 px-6 pb-6 mt-4 sm:grid-cols-2">
               <div>
                 <%= f.label :name ,'菜名' ,class:"text-block dark:text-gray-200" %>
                 <%= f.text_field :name ,class:"block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring"%>
@@ -17,9 +18,14 @@
                 <div>
                   <%= f.label :classification_id, "分類" ,class:"text-block dark:text-gray-200"%>
                   <%= f.select :classification_id, Classification.all.map{ |c| [c.name, c.id] }%>
+                   
                 </div>
-                <select class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
-                    
+                <select  class="block w-full px-4 py-2 mt-2 text-gray-700 bg-white border border-gray-300 rounded-md dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-blue-500 dark:focus:border-blue-500 focus:outline-none focus:ring">
+                    <option> 美式 </option>
+                    <option> 美式 </option>
+                    <option> 美式 </option>
+                    <option> 美式 </option>
+                    <option> 美式 </option>
                 </select>
                 
               </div>
