--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -1,3 +1,5 @@
-<h1>EDIT</h1>
+<%= render "shared/storenavbar", store: @store %>
 
-<%= render "shared/form", store: @store %>
+<h1 class="py-10 font-mono text-5xl font-bold text-center">Edit Store</h1>
+
+<%= render "shared/storeform", store: @store %>
