--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -1,4 +1,7 @@
-<h1>NEW</h1>
+<%= render "shared/storenavbar", store: @store %>
 
-<%= render "shared/form", store: @store %>
+<h1 class="mt-12 py-10 font-mono text-5xl font-bold text-center">Add Store</h1>
+
+
+<%= render "shared/storeform", store: @store %>
 
