--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -4,9 +4,10 @@
 <div>$<%= @menu.price %></div>
 
 <div data-controller="update-quantity">
-  <button data-action="click->update-quantity#decrement" class="bg-gray-300">-</button>
-  <input data-update-quantity-target="quantity" class="border-2" type="number" name="quantity" value="1" min="1" max="10">
-  <button data-action="click->update-quantity#increment" class="bg-gray-300">+</button>
-
-<%= link_to "加入購物車", add_cart_path(@menu, {serial_number: params[:serial_number]}), method: "post", data: {action: "click->update-quantity#addOne",  update_quantity_target: "link", serial_number: params[:serial_number]} %> 
+  <%= form_with url: add_cart_path(@menu, {serial_number: params[:serial_number]}), method: :post do |f| %>
+    <button data-action="click->update-quantity#decrement" class="bg-gray-300">-</button>
+    <%= f.number_field :quantity, class:"border-2", value: 1, min: 1, max: 10, data: {update_quantity_target: "quantity"} %>
+    <button data-action="click->update-quantity#increment" class="bg-gray-300">+</button>
+    <%= f.submit "加入購物車", data: {action: "click->update-quantity#addOne",  update_quantity_target: "link"}%>
+  <% end %>
 </div>
