store座位頁面新增,QRcode頁面設計

--- a/app/views/classifications/index.html.erb
+++ b/app/views/classifications/index.html.erb
@@ -1,6 +1,6 @@
-<%= render "shared/classificationnavbar" %>
+<%= render "shared/menunavbar" %>
 
-<table class="block min-w-full border-collapse md:table">
+<table class="block mt-12 min-w-full border-collapse md:table">
   <thead class="block md:table-header-group">
     <tr class="absolute block border border-grey-500 md:border-none md:table-row -top-full md:top-auto -left-full md:left-auto md:relative ">
       <th class="block p-2 font-bold text-center text-white bg-gray-600 md:border md:border-grey-500 md:table-cell">分類項目</th>
