--- a/app/views/shared/_menunavbar.html.erb
+++ b/app/views/shared/_menunavbar.html.erb
@@ -1,35 +1,50 @@
-<nav id="header" class="z-30 w-full bg-white shadow-md top-10">
-  <div class="flex items-center justify-between w-full px-6 py-2 mt-0 bg-pccific">
-     <div class="order-3 hidden w-full md:flex md:items-center md:w-auto md:order-1" id="menu">
-        <nav>
-           <ul class="items-center justify-between pt-4 text-white md:flex md:pt-0">
+<nav class="bg-white px-2 sm:px-4 dark:bg-gray-900 z-10 fixed w-full top-0 left-0 border-gray-200 dark:border-gray-600">
+   <div class="container flex flex-wrap items-center justify-between mx-auto">
+      <div class="flex items-center">
+         <img src="/photo/lutsjtdb.png" class="w-5 h-8 rounded-full mr-2 sm:h-10 w-10" alt="Flowbite Logo">
+         
+         <div class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">
+         <%= link_to "WeChef", root_path %>
+         </div>
+      </div>
+      <div class="flex md:order-2">   
+         <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-md px-5 py-2.5 text-center mr-3 md:mr-0 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            <%= link_to "Sign out" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "} %>
+         </button>
 
-              <li><%=link_to current_user.email, edit_user_registration_path ,class: "font-mono inline-block px-1 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2" %>
-              </li>
+         <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 text-md text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
+            <span class="sr-only">Open main menu</span>
+            <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd">
+            </path>
+            </svg>
+         </button>
+      </div>
 
-              <li><%= link_to "新增菜單", new_store_menu_path,class: "mx-4 inline-block px-4 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2"%>
-              </li>
+      <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+         <ul class="flex flex-col p-4 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:text-md md:font-medium md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
 
-              <li><%= link_to "新增商店", new_store_path ,class:"mx-4 inline-block px-2 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2" %>
-              </li>
+            <li>
+               <a href="#" class="block py-2 pl-3 pr-4 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white" aria-current="page">
+               </a>
+            </li>
 
-              <li><%= link_to "回首頁", root_path ,class:"mx-4 inline-block px-2 py-2 text-xl font-medium no-underline hover:text-black lg:-ml-2" %>
-              </li>
+            <li>
+               <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"><%= link_to "新增分類", new_store_classification_path %>
+               </a>
+            </li>
 
-           </ul>
-        </nav>
-     </div>
-     <div class="flex flex-wrap items-center justify-end order-2 mr-0 text-xl md:order-3 md:mr-4" id="nav-content">
-        <div class="flex items-center w-full auth md:w-full">
-          <% if user_signed_in?%>
-            <button class="px-8 py-2 text-gray-200 transition duration-500 ease-in-out transform rounded-md bg-tiffany hover:bg-pccific hover:text-xl hover:px-12 hover:py-5 hover:scale-110"><%= link_to "Sign out" , destroy_user_session_path , method: 'DELETE' , data:{confirm: "Are you sure? "} %></button>
-          <% else %>
-            <button class="p-2 mr-4 text-gray-800 bg-transparent border border-gray-300 rounded hover:bg-gray-100 hover:text-gray-700"><%= link_to "註冊" , new_user_registration_path %></button>
-            <button class="p-2 mr-4 text-gray-800 bg-red-400 border border-gray-300 rounded hover:bg-red-300 hover:text-gray-700"><%= link_to "登入" , new_user_session_path %></button>
-          <% end %>
-        </div>
-     </div>
-  </div>
+            <li>
+               <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"><%= link_to "新增菜單", new_store_menu_path %>
+               </a>
+            </li>
+
+            <li>
+               <a href="#" class="block py-2 pl-3 pr-4 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"><%= link_to "回首頁", root_path %>
+               </a>
+            </li>
+
+         </ul>
+      </div>
+   </div>
 </nav>
-
-<!--  bg-tiffany py- hover:bg-red-300 hover:text-gray-100 hover:-translate-y-1 hover:scale-110 -->
