--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,73 +1,71 @@
 <%= render "shared/storenavbar" %>
 
-  <table class="block min-w-full mt-12 border-collapse md:table">
-    <thead class="block md:table-header-group">
-      <tr
-        class="absolute block border border-red-300 md:border-none md:table-row -top-full md:top-auto -left-full md:left-auto md:relative ">
-        <th class="block p-2 font-bold text-center text-white bg-gray-600 md:border md:border-grey-500 md:table-cell">
-          Update classifications</th>
-        <th class="block p-2 font-bold text-center text-white bg-gray-600 md:border md:border-grey-500 md:table-cell">
-          商店名稱</th>
-        <th class="block p-2 font-bold text-center text-white bg-gray-600 md:border md:border-grey-500 md:table-cell">
-          商店地址</th>
-        <th class="block p-2 font-bold text-center text-white bg-gray-600 md:border md:border-grey-500 md:table-cell">電話
+  <table class="block min-w-full mt-12 border-collapse sm:table">
+    <thead class="block sm:table-header-group">
+      <tr class="absolute block border border-red-300 sm:border-none sm:table-row -top-full sm:top-auto -left-full sm:left-auto sm:relative ">
+        <th class="block p-2 font-bold text-center text-white bg-gray-600 sm:border sm:border-grey-500 sm:table-cell">商店名稱
+          </th>
+        <th class="block p-2 font-bold text-center text-white bg-gray-600 sm:border sm:border-grey-500 sm:table-cell">商店地址
+          </th>
+        <th class="block p-2 font-bold text-center text-white bg-gray-600 sm:border sm:border-grey-500 sm:table-cell">商店電話
+          </th>
+        <th class="block p-2 font-bold text-center text-white sm:hidden bg-gray-600 sm:border sm:border-grey-500 sm:table-cell">Actions
         </th>
-        <th class="block p-2 font-bold text-center text-white bg-gray-600 md:border md:border-grey-500 md:table-cell">
-          Actions</th>
+        <th class="block p-2 font-bold text-center text-white bg-gray-600 sm:border sm:border-grey-500 sm:table-cell">
+          Update classifications</th>
       </tr>
     </thead>
-    <tbody class=" block md:table-row-group">
+    <tbody class="block sm:table-row-group">
       <% @stores.each do |store| %>
-        <tr class="block content-around justify-self-start bg-gray-300 border border-grey-500 md:border-none md:table-row">
-     
+        <tr class="block content-around justify-self-start bg-gray-300 border border-grey-500 sm:border-none sm:table-row">
 
-          <td class="grid grid-cols-2 p-2 md:border md:border-grey-500 md:table-cell">
-            <span class="font-bold justify-self-end md:hidden">User Name:</span>
-            <%= link_to store.name, store_path(store.id) %>
+          <td class="grid grid-cols-2 p-2 sm:border sm:border-grey-500 sm:table-cell">
+            <span class="mx-2 font-bold justify-self-end sm:hidden">Store Name:</span>
+            <p class="text-center"><%= link_to store.name, store_path(store.id) %></p>
           </td>
 
-          <td class="grid grid-cols-2 p-2 md:border md:border-grey-500 md:table-cell">
-            <span class="font-bold justify-self-end md:hidden">Address:</span>
-            <p><%= store.address %></p>
+          <td class="grid grid-cols-2 p-2 sm:border sm:border-grey-500 sm:table-cell">
+            <span class="mx-2 font-bold justify-self-end sm:hidden">Address:</span>
+            <p class="text-center"><%= store.address %></p>
           </td>
 
-          <td class="grid grid-cols-2 p-2 md:border md:border-grey-500 md:table-cell">
-            <span class="font-bold justify-self-end md:hidden">Phone:</span>
-            <%= store.tel %>
+          <td class="grid grid-cols-2 p-2 sm:border sm:border-grey-500 sm:table-cell">
+            <span class="mx-2 font-bold justify-self-end sm:hidden">Phone:</span>
+            <p class="text-center"><%= store.tel %></p>
           </td>
 
-          <td class="grid grid-cols-2 p-2 md:border md:border-grey-500 md:table-cell">
-            <span class="font-bold justify-self-end md:hidden">Actions:</span>
+          <td class=" p-2 sm:hidden sm:border sm:border-grey-500 sm:table-cell">
+            <span class="mx-2 font-bold justify-self-end sm:hidden">Actions:</span>
             <div>
-              <button class="px-2 py-1 font-bold text-white bg-blue-500 border border-blue-500 rounded hover:bg-blue-700">
+              <button class="px-2 py-1 font-bold sm:hidden text-white bg-blue-500 border border-blue-500 rounded hover:bg-blue-700">
                 <%= link_to "Edit" , edit_store_path(id: store.id) %>
               </button>
-              <button class="px-2 py-1 font-bold text-white bg-red-500 border border-red-500 rounded hover:bg-red-700">
+              <button class="px-2 py-1 font-bold sm:hidden text-white bg-red-500 border border-red-500 rounded hover:bg-red-700">
                 <%= link_to "Delete" , store_path(id: store.id), method: "delete" , data: {confirm: "確定刪除？" } %>
               </button>
             </div>
           </td>
 
-          <td class="grid grid-cols-1 p-2 md:border md:border-grey-500 md:table-cell">
-            <span class="inline-block justify-self-end w-1/3 font-bold md:hidden">Update:</span>
-            <div>
+          <td class="p-2 sm: sm:border sm:border-grey-500 sm:table-cell">
+            <span class="mx-2 justify-self-end font-bold sm:hidden">Update:</span>
+            <div class="text-center">
               <button
-                class="px-2 py-1 font-bold text-white bg-blue-500 border border-blue-500 rounded bg hover:bg-blue-700">
+                class="px-2 py-1 font-bold text-white bg-tiffany border border-blue-500 rounded bg hover:bg-blue-500">
                 <%= link_to "菜單分類" , store_classifications_path(store.id) %>
               </button>
               <button
-                class="px-2 py-1 font-bold text-white bg-blue-500 border border-blue-500 rounded bg hover:bg-blue-700">
+                class="px-2 py-1 font-bold text-white bg-blue-500 border border-blue-500 rounded bg hover:bg-pccific">
                 <%= link_to "新增菜單" , store_menus_path(store.id) %>
+              </button>
+              <button
+                class="px-2 py-1 font-bold text-white bg-tiffany border border-blue-500 rounded bg hover:bg-blue-500">
+                <%= link_to "新增餐桌" , store_menus_path(store.id) %>
               </button>
             </div>
           </td>
-
         </tr>
       <% end %>
     </tbody>
   </table>
 
 
-
-
- 
