--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,22 +1,119 @@
-<h1>SHOW</h1>
-店名：<%= @store.name %>
-電話：<%= @store.tel %>
-地址：<%= @store.address %>
-營業時間（起）：<%= @store.business_hours_start %>
-營業時間（迄）：<%= @store.business_hours_end %>
-商店LOGO：<%= @store.logo %>
-<%=link_to "返回", stores_path %>
-<hr>
-<%= link_to "新增桌位", new_store_desk_path(@store) %>
+<div class="h-screen flex flex-col">
+  <header class="flex flex-shrink-0">
+    <div class="flex-shrink-0 px-4 py-3 bg-gray-800 md:w-60">
+      <button class="flex items-center block w-full">
+        <img src="/photo/lutsjtdb.png" class="w-5 h-8 rounded-full mr-2 sm:h-10 w-10" alt="Flowbite Logo">
+        <span class="ml-4 text-lg font-medium text-white">WeChef</span>
+        <svg class=" ml-auto h-6 w-6 ml-10 stroke-current text-gray-400" viewBox="0 0 24 24" fill="none">
+          <path d="M16 10l-4 4-4-4" stroke="4A5568" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        </svg>
+      </button>
+    </div>
+    <div class="flex-1 flex bg-gray-700 px-3 md:px-6 items-center justify-between">
+      <nav class="hidden md:block">
+        <div
+          class="hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
+          <%= link_to '新增商店', new_store_path%>
+        </div>
+        <div
+          class="ml-2 hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
+          <%= link_to "新增分類",new_store_classification_path(@store) %>
+        </div>
+        <div
+          class="hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
+          <%= link_to "新增菜單", new_store_menu_path(@store) %>
+        </div>
+        <div
+          class="hover:bg-gray-400 rounded-lg inline-block text-md font-medium text-white px-3 py-2 leading-none">
+          <%= link_to "回首頁", root_path %>
+        </div>
+      </nav>
+      <div>
+        <input
+        class="focus:bg-white focus:text-gray-900 px-3  focus:placeholder-gray-600 md:px-4 py-2 leading-none bg-gray-900 rounded-lg text-sm placeholder-gray-400 text-white"
+        placeholder="Search">
+      </div>
+    </div>
+  </header>
+  <div class="flex-1 flex overflow-x-hidden">
+    <div class="sm:p-6 md:6 lg:p-2 bg-gray-100 overflow-y-auto hidden box-border md:block">
+      <nav>
+        <h2 class="w-full text-xl text-center font-semibold text-gray-700 uppercase tracking-wide"><%= @store.name %></h2>
+        <h2 class="font-semibold text-center text-gray-600 uppercase tracking-wide">Store Inf</h2>
+        <div class="mt-3">
+          <span class=" text-gray-700 py-1 px-3 text-sm font-medium flex items-center justify-between hover:bg-gray-300 rounded-lg">電話：<%= @store.tel %>
+          </span>
+        </div>
+        
+        <div class="mt-3">
+            <span class=" text-gray-700 py-1 px-3 text-sm font-medium flex items-center justify-between hover:bg-gray-300 rounded-lg">地址：<%= @store.address %>
+            </span>
+        </div>
+        <div class="mt-3">
+          <div
+            class=" px-3 text-sm font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
+            <span class="w-full text-gray-700 ">營業時間（起）：</span>
+            <span class="w-full"><%= @store.business_hours_start %></span>
+          </div>
+        </div>
+        <div class="mt-3">
+          <div
+            class=" px-3 text-sm font-medium flex flex-wrap items-center hover:bg-gray-300 rounded-lg">
+            <span class="w-full text-gray-700 ">營業時間（迄）：</span>
+            <span class="w-full"><%= @store.business_hours_end %></span>
+          </div>
+        </div>
+        <div class="mt-8">
+          <h2 class="font-semibold text-center text-gray-600 uppercase tracking-wide">Edit store</h2>
+          <div class="mt-3">
+            <div
+              class="py-1 px-3 text-sm text-tiffany font-medium flex items-center hover:bg-gray-300 rounded-lg">
+              <%= link_to "新增桌位" , new_store_desk_path(@store) %>
+            </div>
+          </div>
 
-<div>
-  <% @desks.each do |desk| %>
-    <section class="inline-block px-5 py-5 bg-red-100">
-      <div>桌位：<%= desk.name %></div>
-      <div>座位數量：<%= desk.seat_amount %></div>
-      <span class="bg-green-100"><%= link_to "編輯", edit_store_desk_path(@store, desk.id) %></span>
-      <span class="bg-blue-100"><%= link_to "刪除", store_desk_path(@store, desk.id), method: "delete", data: {confirm: "確定刪除？"} %></span>
-      <span class="bg-yellow-100"><%= link_to "QRCode", store_desk_path(@store, desk.id) %></span>
-    </section>
-  <% end %>
+          <div class="mt-3">
+            <a href=""
+              class="  py-1 px-3 text-sm font-medium flex items-center justify-between hover:bg-gray-300 rounded-lg">
+              <span class=" text-gray-700">Refunds</span>
+            </a>
+          </div>
+
+          <div class="mt-3">
+            <a href=""
+              class="  py-1 px-3 text-sm font-medium flex items-center justify-between hover:bg-gray-300 rounded-lg">
+              <span class=" text-gray-700">Discounts</span>
+            </a>
+          </div>
+
+          <div class="mt-3">
+            <a href=""
+              class="  py-1 px-3 text-sm font-medium flex items-center justify-between hover:bg-gray-300 rounded-lg">
+              <span class=" text-gray-700">Bugs</span>
+            </a>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <main class="w-full p-3 lg:p-5 grid grid-cols-1 items-center gap-1 text-sm md:text-lg md:grid-cols-4 md:grid-rows-6 lg:grid-cols-6 lg:grid-rows-8 md:gap-3 bg-gray-200">
+      <% @desks.each do |desk| %>
+        <section class="w-full h-full box-border p-4 text-center md:rounded-lg bg-red-100 hover:bg-red-200 hover:scale-110" >
+          <div>桌位：<%= desk.name %></div>
+          <div>座位數量：<%= desk.seat_amount %></div>
+          <span class="bg-green-100" >
+            <%= link_to "編輯" , edit_store_desk_path(@store, desk.id) %>
+          </span>
+          <span class="bg-blue-100 mx-2">
+            <%= link_to "刪除" , 
+            store_desk_path(@store, desk.id), 
+            method: "delete" , 
+            data: {confirm: "確定刪除？"} %>
+          </span>
+          <span class="bg-yellow-100">
+            <%= link_to "QRCode" , store_desk_path(@store, desk.id) %>
+          </span>
+        </section>
+      <% end %>
+    </main>
+  </div>
 </div>
